# cv-mlops

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  commands.py  pyproject.toml  runner.py
.dvc/: config
.github/workflows/: pre-commit.yml
configs/: infer.yaml  train.yaml
configs/callbacks/: default.yaml
configs/data/: test_data.yaml  train_data.yaml
configs/mlflow/: default.yaml
configs/model/: fc.yaml
configs/optimizer/: adam.yaml
configs/optimizer/scheduler/: default.yaml
configs/tensorboard/: default.yaml
configs/trainer/: default.yaml
cv_mlops/: __init__.py  constants.py  data.py  infer.py  train.py  utils.py
cv_mlops/metrics/: __init__.py  accuracy_score.py  f1_score.py
cv_mlops/models/: __init__.py  base.py  fc_model.py
data/: test.dvc  train.dvc
models/: model.ckpt.dvc
notebooks/: week12_cnn_seminar.ipynb
src/: infer.py  train.py  utils.py
