[tool.poetry]
name = "cv-mlops"
version = "0.0.1"
description = "Computer vision classification (Dogs VS Cats) with MLops features usage"
authors = ["Vyacheslav Kostrov <slavkostrov@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.1.1"
torchvision = "^0.16.1"
pandas = "^2.1.4"
numpy = "^1.26.2"
fire = "^0.5.0"
hydra-core = "^1.3.2"
dvc = "^3.36.1"
dvc-gdrive = "^3.0.0"
scikit-learn = "^1.3.2"
tqdm = "^4.66.1"
mlflow = "^2.9.2"
matplotlib = "^3.8.2"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.0"
black = "^23.12.0"
isort = "^5.13.1"
flake8 = "^6.1.0"
ruff = "^0.1.7"
pre-commit-hooks = "^4.5.0"


[tool.poetry.group.research.dependencies]
ipykernel = "^6.27.1"
seaborn = "^0.13.0"
tqdm = "^4.66.1"
torch-summary = "^1.4.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
line-length = 120
extend-select = [
    # "F", #  flake8 - included as default in select
    # "I", #  isort
    # "D", #  pydocstyle
    "B", #  flake-bugbear
    "Q"  #  flake-quotes
]
extend-include = ["*.ipynb"]
extend-exclude = ["tests"]
force-exclude = true

[tool.ruff.pydocstyle]
convention = "google"

[tool.isort]
profile = 'black'

[tool.black]
line-length = 120
